created hero image with text

--- a/index.html
+++ b/index.html
@@ -18,6 +18,16 @@
 
 <body>
 
+    <!--Hero Image-->
+    <div class="container-resposnive">
+        <div class="row">
+            <div class="col">
+                <img src="assets/img/banner.jpg" alt="banner" class="img-resposnive hero-image">
+                <h1 class="title">Welcome to</h1>
+                <p class="title1">Manchester United</p>
+            </div>
+        </div>
+    </div>
 
 
     <!-- Scripts tags are at the end to improve loading time -->
