created navbar with logo

--- a/index.html
+++ b/index.html
@@ -18,6 +18,38 @@
 
 <body>
 
+    <!--Navbar-->
+    <div id="home"></div>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+
+        <!--Logo-->
+        <a href="#home">
+            <img src="assets/img/logo.png" href="home" class="logo" class="img-resposnive">
+        </a>
+
+
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto">
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">History</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">Link</a>
+                </li>
+            </ul>
+        </div>
+    </nav>
+
     <!--Hero Image-->
     <div class="container-resposnive">
         <div class="row">
@@ -28,6 +60,8 @@
             </div>
         </div>
     </div>
+
+    <!--History-->
 
 
     <!-- Scripts tags are at the end to improve loading time -->
