--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <a class="nav-link" href="#">Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">History</a>
+                    <a class="nav-link" href="#history">History</a>
                 </li>
                 <li class="nav-item">
                     <a class="nav-link" href="#">Home</a>
@@ -62,7 +62,21 @@
     </div>
 
     <!--History-->
+    <div id="history"></div>
+    <div class="container">
+        <h1 class="history-title text-center mt-5">History</h1>
+        <div class="about-border"></div>
 
+        <div class="row">
+            <div class="col-xs-12 col-md-6 mt-5">
+                <img src="assets/img/BusbyBabes_crop_north.jpg" alt="history-image" class="img-fluid">
+            </div>
+            <div class="col-xs-12 col-md-6">
+                <p class="history-text ml-5 mr-5">Founded in 1878 as Newton Heath L&YR fotball club, the club has operated for over 140 years. The team first entered the english first division, then the highest league in English Football, for the start of the 1892-1893 season. The club
+                    name changed to Manchester united football club in 1902, and we won the first of our 20 English league titles in 1908. In 1910, Manchester United moved to Old Trafford, it’s current stadium.</p>
+            </div>
+        </div>
+    </div>
 
     <!-- Scripts tags are at the end to improve loading time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
