created fame board section

--- a/index.html
+++ b/index.html
@@ -78,6 +78,54 @@
         </div>
     </div>
 
+    <!--Fame Board-->
+    <!--Fame Board visible only on lg and bigger devices for better UX-->
+    <div class="container-fluid fame-board pt-4 d-none d-lg-block">
+        <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
+        <div class="about-border1 mb-5"></div>
+        <div class="row no-gutters">
+
+
+
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/beckham.jpg" alt="player image1" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/gigs.jpg" alt="player image2" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/scholes.png" alt="player image3" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/rooney.jpg" alt="player image4" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/smeichel.png" alt="player image5" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="hover col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/charlton.jpg" alt="player image6" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="hover col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/best.jpg" alt="player image7" class="img-responsive fame-images"></figure>
+            </div>
+
+            <div class="hover col-sm-12 col-md-6 col-lg-3">
+                <figure><img src="assets/img/cantona.jpg" alt="player image8" class="img-responsive fame-images"></figure>
+            </div>
+
+        </div>
+    </div>
+
+    </div>
+    </div>
+    </div>
+
     <!-- Scripts tags are at the end to improve loading time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js "></script>
