--- a/index.html
+++ b/index.html
@@ -79,64 +79,63 @@
     </div>
 
     <!--Fame Board-->
-    <!--Fame Board visible only on lg and bigger devices for better UX-->
-    <div class="container-fluid fame-board pt-4 d-none d-lg-block">
+    <!--Fame Board visible only on md and bigger devices for better UX-->
+    <div class="container-responsive fame-board pt-4 d-none d-lg-block">
         <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
         <div class="about-border1 mb-5"></div>
         <div class="row no-gutters">
 
 
-
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/beckham.jpg" alt="player image1" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">David Beckham</h5>
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/gigs.jpg" alt="player image2" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Ryan Giggs</h5>
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/scholes.png" alt="player image3" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Paul Schools</h5>
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/rooney.jpg" alt="player image4" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Wayne Rooney</h5>
                 </div>
             </div>
 
-            <div class="col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/smeichel.png" alt="player image5" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Peter Smeichel</h5>
                 </div>
             </div>
 
-            <div class="hover col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/charlton.jpg" alt="player image6" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Bobby Charlton</h5>
                 </div>
             </div>
 
-            <div class="hover col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/best.jpg" alt="player image7" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">George Best</h5>
                 </div>
             </div>
 
-            <div class="hover col-sm-12 col-md-6 col-lg-3">
+            <div class="col-md-6 col-lg-3">
                 <figure><img src="assets/img/cantona.jpg" alt="player image8" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Eric Cantona</h5>
@@ -145,10 +144,85 @@
 
         </div>
     </div>
+    </div>
 
+    <!--Carousel Fame Board-->
+    <!--Visible only on sm and smaller devices for better UX-->
+    <div class="container-responsive fame-board pt-4 d-lg-none">
+        <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
+        <div class="about-border1 mb-5"></div>
+        <div class="row">
+
+
+            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                <div class="carousel-inner">
+
+                    <div class="carousel-item active">
+                        <img src="assets/img/beckham.jpg" alt="player image1" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">David Beckham</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/gigs.jpg" alt="player image2" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">Ryan Giggs</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/scholes.png" alt="player image3" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">Paul Schooles</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/rooney.jpg" alt="player image4" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">Wyane Rooney</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/smeichel.png" alt="player image5" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">Peter Smeichel</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/charlton.jpg" alt="player image6" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">Bobby Charlton</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/best.jpg" alt="player image7" class="img-responsive fame-images-carousel">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">George Best</h5>
+                        </div>
+                    </div>
+
+                    <div class="carousel-item">
+                        <img src="assets/img/cantona.jpg" alt="player image8" class="img-responsive">
+                        <div class="carousel-caption">
+                            <h5 class="fame-name">Eric Cantona</h5>
+                        </div>
+                    </div>
+
+
+
+
+                </div>
+            </div>
+
+
+        </div>
     </div>
-    </div>
-    </div>
+
 
     <!-- Scripts tags are at the end to improve loading time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
