fixed responsive issue

--- a/index.html
+++ b/index.html
@@ -86,56 +86,56 @@
         <div class="row no-gutters">
 
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/beckham.jpg" alt="player image1" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">David Beckham</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/gigs.jpg" alt="player image2" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Ryan Giggs</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/scholes.png" alt="player image3" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Paul Schools</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/rooney.jpg" alt="player image4" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Wayne Rooney</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/smeichel.png" alt="player image5" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Peter Smeichel</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/charlton.jpg" alt="player image6" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Bobby Charlton</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/best.jpg" alt="player image7" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">George Best</h5>
                 </div>
             </div>
 
-            <div class="col-md-6 col-lg-3">
+            <div class="col-md-6 col-xl-3">
                 <figure><img src="assets/img/cantona.jpg" alt="player image8" class="img-responsive fame-images"></figure>
                 <div class="carousel-caption d-none d-md-block">
                     <h5 class="fame-name">Eric Cantona</h5>
