added and styled video section

--- a/index.html
+++ b/index.html
@@ -214,15 +214,23 @@
                     </div>
 
 
-
-
                 </div>
             </div>
-
 
         </div>
     </div>
 
+    <!--Beginings-->
+    <div class="container-responsive mt-5 pt-4">
+        <h1 class="beginings-title mt-5 text-center">The Beginings</h1>
+        <div class="about-border1 mb-5"></div>
+
+        <div class="row justify-content-center text-center">
+            <div class="col text-justify-center">
+                <iframe src="https://www.youtube.com/embed/lwKFpAOXc64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </div>
+        </div>
+    </div>
 
     <!-- Scripts tags are at the end to improve loading time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
