--- a/index.html
+++ b/index.html
@@ -41,10 +41,10 @@
                     <a class="nav-link" href="#history">History</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Home</a>
+                    <a class="nav-link" href="#fame-board">Fame Board</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" href="#the-beginings">The Beginings</a>
                 </li>
             </ul>
         </div>
@@ -80,6 +80,7 @@
 
     <!--Fame Board-->
     <!--Fame Board visible only on md and bigger devices for better UX-->
+    <div id="fame-board"></div>
     <div class="container-responsive fame-board pt-4 d-none d-lg-block">
         <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
         <div class="about-border1 mb-5"></div>
@@ -148,6 +149,7 @@
 
     <!--Carousel Fame Board-->
     <!--Visible only on sm and smaller devices for better UX-->
+    <div id="fame-board"></div>
     <div class="container-responsive fame-board pt-4 d-lg-none">
         <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
         <div class="about-border1 mb-5"></div>
@@ -221,6 +223,7 @@
     </div>
 
     <!--Beginings-->
+    <div id="the-beginings"></div>
     <div class="container-responsive mt-5 pt-4">
         <h1 class="beginings-title mt-5 text-center">The Beginings</h1>
         <div class="about-border1 mb-5"></div>
