created & styled stadium section

--- a/index.html
+++ b/index.html
@@ -46,6 +46,9 @@
                 <li class="nav-item">
                     <a class="nav-link" href="#the-beginings">The Beginings</a>
                 </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#stadium">Stadium</a>
+                </li>
             </ul>
         </div>
     </nav>
@@ -235,6 +238,27 @@
         </div>
     </div>
 
+    <!--Stadium-->
+    <div id="stadium"></div>
+    <div class="container-responsive mt-5 pt-4">
+        <h1 class="beginings-title mt-5 text-center">Old Trafford</h1>
+        <div class="about-border1 mb-5"></div>
+
+        <div class="row">
+            <div class="col-md-12 col-lg-6">
+                <img src="assets/img/old-trafford.jpg" alt="old trafford stadium" class="img-responsive stadium">
+            </div>
+            <div class="col-md-12 col-lg-6">
+                <p class="stadium-content ml-5 mr-5 mt-4 mt-xl-5 pt-xl-3">Old Trafford is a football stadium in Old Trafford, Greater Manchester, England, and the home of Manchester United. With a capacity of 74,140 seats, it is the largest club football stadium (and second-largest football stadium overall after Wembley
+                    Stadium) in the United Kingdom, and the eleventh-largest in Europe.
+                </p>
+                <p class="stadium-content1 ml-5 mr-5 mt-5 ">Nicknamed "The Theatre of Dreams" by Bobby Charlton,  Old Trafford has been United's home ground since 1910, although from 1941 to 1949 the club shared Maine Road with local rivals Manchester City as a result of Second World War bomb damage.
+                    Old Trafford underwent several expansions in the 1990s and 2000s, including the addition of extra tiers to the North, West and East Stands, almost returning the stadium to its original capacity of 80,000. Future expansion is likely
+                    to involve the addition of a second tier to the South Stand, which would raise the capacity to around 88,000. The stadium's record attendance was recorded in 1939, when 76,962 spectators watched the FA Cup semi-final between Wolverhampton
+                    Wanderers and Grimsby Town.</p class="stadium-content">
+            </div>
+        </div>
+    </div>
     <!-- Scripts tags are at the end to improve loading time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js "></script>
