created footer section with social media and newsletter

--- a/index.html
+++ b/index.html
@@ -259,6 +259,73 @@
             </div>
         </div>
     </div>
+
+
+    <!--Footer-->
+    <footer class="page-footer font-small">
+        <div class="container text-center text-md-left">
+            <div class="row">
+
+                <div class="col-md-3 mx-auto">
+                    <section class="newsletter text-center ">
+                        <div class="container p-3">
+                            <h3 class="text-white">SUBSCRIBE NOW</h3>
+                            <form action="#" method="Post">
+                                <input type="text" name="text" placeholder="Enter Your Email">
+                                <a href="#"><button type="button" class="btn btn-default"><i class="fa fa-envelope"></i>Subscribe</button></a>
+                            </form>
+                        </div>
+                    </section>
+
+                </div>
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <div class="col-md-3 mx-auto">
+                    <h5 class="font-weight-bold mt-3 mb-4 text-black footer-header">social media</h5>
+
+                    <ul class="list-unstyled">
+                        <li>
+                            <a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
+                            <a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
+                            <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.linkedin.com" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
+                        </li>
+                    </ul>
+                </div>
+
+                <hr class="clearfix w-100 d-md-none">
+
+                <div class="col-md-3 mx-auto">
+                    <h5 class="font-weight-bold mt-3 mb-4 footer-header">contact us</h5>
+
+                    <ul class="list-unstyled text-white">
+                        <li>
+                            Sir Matt Busby Way, M16 0RA Manchester
+                        </li>
+                        <i>
+                            <i class="far fa-envelope ml-4"></i><a class="footer-icon" href="mailto:name@email.com">manunited@gmail.com</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-phone mt-2"></i><a class="footer-icon mt-2" href="0123456789">0123456789</a>
+                        </li>
+                        <li>
+                            <i class="fas fa-tty mt-2"></i><a class="footer-icon mt-2" href="9876543210">9876543210</a>
+                        </li>
+                    </ul>
+
+                </div>
+            </div>
+        </div>
+        <div class="text-center p-3" style="background-color: rgba(0, 0, 0, 0.2)">
+            © 2020 Copyright:
+            <a class="text-white">This website is for educational purpose only.</a>
+        </div>
+    </footer>
+
+
+
+
     <!-- Scripts tags are at the end to improve loading time -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js "></script>
