--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                 <hr class="clearfix w-100 d-md-none">
 
                 <div class="col-md-3 mx-auto">
-                    <h5 class="font-weight-bold mt-3 mb-4 text-black footer-header">social media</h5>
+                    <h5 class="font-weight-bold mt-3 mb-4 text-black footer-header text-uppercase">social media</h5>
 
                     <ul class="list-unstyled">
                         <li>
@@ -297,7 +297,7 @@
                 <hr class="clearfix w-100 d-md-none">
 
                 <div class="col-md-3 mx-auto">
-                    <h5 class="font-weight-bold mt-3 mb-4 footer-header">contact us</h5>
+                    <h5 class="font-weight-bold mt-3 mb-4 footer-header text-uppercase">contact us</h5>
 
                     <ul class="list-unstyled text-white">
                         <li>
