fixed all issue and errors

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 
         <!--Logo-->
         <a href="#home">
-            <img src="assets/img/logo.png" href="home" class="logo" class="img-resposnive">
+            <img src="assets/img/logo.png" alt="manchester united logo" class="img-resposnive logo">
         </a>
 
 
@@ -148,7 +148,7 @@
 
         </div>
     </div>
-    </div>
+
 
     <!--Carousel Fame Board-->
     <!--Visible only on sm and smaller devices for better UX-->
@@ -233,7 +233,7 @@
 
         <div class="row justify-content-center text-center">
             <div class="col text-justify-center">
-                <iframe src="https://www.youtube.com/embed/lwKFpAOXc64" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+                <iframe src="https://www.youtube.com/embed/lwKFpAOXc64" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </div>
         </div>
     </div>
@@ -255,7 +255,7 @@
                 <p class="stadium-content1 ml-5 mr-5 mt-5 ">Nicknamed "The Theatre of Dreams" by Bobby Charlton,  Old Trafford has been United's home ground since 1910, although from 1941 to 1949 the club shared Maine Road with local rivals Manchester City as a result of Second World War bomb damage.
                     Old Trafford underwent several expansions in the 1990s and 2000s, including the addition of extra tiers to the North, West and East Stands, almost returning the stadium to its original capacity of 80,000. Future expansion is likely
                     to involve the addition of a second tier to the South Stand, which would raise the capacity to around 88,000. The stadium's record attendance was recorded in 1939, when 76,962 spectators watched the FA Cup semi-final between Wolverhampton
-                    Wanderers and Grimsby Town.</p class="stadium-content">
+                    Wanderers and Grimsby Town.</p>
             </div>
         </div>
     </div>
@@ -272,7 +272,7 @@
                             <h3 class="text-white">SUBSCRIBE NOW</h3>
                             <form action="#" method="Post">
                                 <input type="text" name="text" placeholder="Enter Your Email">
-                                <a href="#"><button type="button" class="btn btn-default"><i class="fa fa-envelope"></i>Subscribe</button></a>
+                                <a href="#" class="btn btn-default"><i class="fa fa-envelope"></i>Subscribe</a>
                             </form>
                         </div>
                     </section>
@@ -303,7 +303,7 @@
                         <li>
                             Sir Matt Busby Way, M16 0RA Manchester
                         </li>
-                        <i>
+                        <li>
                             <i class="far fa-envelope ml-4"></i><a class="footer-icon" href="mailto:name@email.com">manunited@gmail.com</a>
                         </li>
                         <li>
@@ -325,13 +325,13 @@
 
 
 
-
-    <!-- Scripts tags are at the end to improve loading time -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js "></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "></script>
-    <script src="assets/js/main.js "></script>
+</body>
+<!-- Scripts tags are at the end to improve loading time -->
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.slim.min.js "></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.16.1/umd/popper.min.js "></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js "></script>
+<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js "></script>
+<script src="assets/js/main.js "></script>
 
 </body>
 
