--- a/index.html
+++ b/index.html
@@ -157,71 +157,71 @@
         <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
         <div class="about-border1 mb-5"></div>
         <div class="row">
+            <div class="col">
 
+                <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+                    <div class="carousel-inner">
 
-            <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
-                <div class="carousel-inner">
-
-                    <div class="carousel-item active">
-                        <img src="assets/img/beckham.jpg" alt="player image1" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">David Beckham</h5>
+                        <div class="carousel-item active">
+                            <img src="assets/img/beckham.jpg" alt="player image1" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">David Beckham</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/gigs.jpg" alt="player image2" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">Ryan Giggs</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/gigs.jpg" alt="player image2" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">Ryan Giggs</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/scholes.png" alt="player image3" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">Paul Schooles</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/scholes.png" alt="player image3" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">Paul Schooles</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/rooney.jpg" alt="player image4" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">Wyane Rooney</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/rooney.jpg" alt="player image4" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">Wyane Rooney</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/smeichel.png" alt="player image5" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">Peter Smeichel</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/smeichel.png" alt="player image5" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">Peter Smeichel</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/charlton.jpg" alt="player image6" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">Bobby Charlton</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/charlton.jpg" alt="player image6" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">Bobby Charlton</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/best.jpg" alt="player image7" class="img-responsive fame-images-carousel">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">George Best</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/best.jpg" alt="player image7" class="img-responsive fame-images-carousel">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">George Best</h5>
+                            </div>
                         </div>
-                    </div>
 
-                    <div class="carousel-item">
-                        <img src="assets/img/cantona.jpg" alt="player image8" class="img-responsive">
-                        <div class="carousel-caption">
-                            <h5 class="fame-name">Eric Cantona</h5>
+                        <div class="carousel-item">
+                            <img src="assets/img/cantona.jpg" alt="player image8" class="img-responsive">
+                            <div class="carousel-caption">
+                                <h5 class="fame-name">Eric Cantona</h5>
+                            </div>
                         </div>
+
+
                     </div>
-
-
                 </div>
             </div>
-
         </div>
     </div>
 
@@ -269,10 +269,10 @@
                 <div class="col-md-3 mx-auto">
                     <section class="newsletter text-center ">
                         <div class="container p-3">
-                            <h3 class="text-white">SUBSCRIBE NOW</h3>
+                            <h4 class="text-white mb-4">SUBSCRIBE NOW</h4>
                             <form action="#" method="Post">
-                                <input type="text" name="text" placeholder="Enter Your Email">
-                                <a href="#" class="btn btn-default"><i class="fa fa-envelope"></i>Subscribe</a>
+                                <input type="text" class="subscribe" name="text" placeholder="Enter Your Email">
+                                <a href="#" class="btn btn-default"><i class="fa fa-envelope mr-1"></i>Subscribe</a>
                             </form>
                         </div>
                     </section>
@@ -286,9 +286,9 @@
 
                     <ul class="list-unstyled">
                         <li>
-                            <a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook"></i></a>
-                            <a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter"></i></a>
-                            <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram"></i></a>
+                            <a href="https://www.facebook.com" target="_blank" rel="noopener"><i class="fab fa-facebook mr-1"></i></a>
+                            <a href="https://www.twitter.com" target="_blank" rel="noopener"><i class="fab fa-twitter mr-1"></i></a>
+                            <a href="https://www.instagram.com" target="_blank" rel="noopener"><i class="fab fa-instagram mr-1"></i></a>
                             <a href="https://www.linkedin.com" target="_blank" rel="noopener"><i class="fab fa-linkedin"></i></a>
                         </li>
                     </ul>
@@ -304,13 +304,13 @@
                             Sir Matt Busby Way, M16 0RA Manchester
                         </li>
                         <li>
-                            <i class="far fa-envelope ml-4"></i><a class="footer-icon" href="mailto:name@email.com">manunited@gmail.com</a>
+                            <i class="far fa-envelope mr-2"></i><a class="footer-icon" href="mailto:name@email.com">manunited@gmail.com</a>
                         </li>
                         <li>
-                            <i class="fas fa-phone mt-2"></i><a class="footer-icon mt-2" href="0123456789">0123456789</a>
+                            <i class="fas fa-phone mt-2 mr-2"></i><a class="footer-icon mt-2" href="0123456789">0123456789</a>
                         </li>
                         <li>
-                            <i class="fas fa-tty mt-2"></i><a class="footer-icon mt-2" href="9876543210">9876543210</a>
+                            <i class="fas fa-tty mt-2 mr-2"></i><a class="footer-icon mt-2" href="9876543210">9876543210</a>
                         </li>
                     </ul>
 
