trying to fix 15px white space

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Font awesome -->
@@ -153,9 +153,11 @@
     <!--Carousel Fame Board-->
     <!--Visible only on sm and smaller devices for better UX-->
     <div id="fame-board"></div>
-    <div class="container-responsive fame-board pt-4 d-lg-none">
-        <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
-        <div class="about-border1 mb-5"></div>
+    <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
+    <div class="about-border1 mb-5"></div>
+
+    <div class="container fame-board pt-4 d-lg-none">
+
         <div class="row">
             <div class="col">
 
