--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=320, height=device-height, target-densitydpi=medium-dpi" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
 
     <!-- Font awesome -->
@@ -66,7 +66,7 @@
 
     <!--History-->
     <div id="history"></div>
-    <div class="container">
+    <div class="container-responsive">
         <h1 class="history-title text-center mt-5">History</h1>
         <div class="about-border"></div>
 
@@ -156,7 +156,7 @@
     <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
     <div class="about-border1 mb-5"></div>
 
-    <div class="container fame-board pt-4 d-lg-none">
+    <div class="container-responsive fame-board pt-4 d-lg-none">
 
         <div class="row">
             <div class="col">
@@ -265,7 +265,7 @@
 
     <!--Footer-->
     <footer class="page-footer font-small">
-        <div class="container text-center text-md-left">
+        <div class="container-responsive text-center text-md-left">
             <div class="row">
 
                 <div class="col-md-3 mx-auto">
