--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <!--History-->
     <div id="history"></div>
-    <div class="container-responsive">
+    <div class="container">
         <h1 class="history-title text-center mt-5">History</h1>
         <div class="about-border"></div>
 
@@ -153,8 +153,8 @@
     <!--Carousel Fame Board-->
     <!--Visible only on sm and smaller devices for better UX-->
     <div id="fame-board"></div>
-    <h1 class="fame-board-title mt-5 text-center">Fame Board</h1>
-    <div class="about-border1 mb-5"></div>
+    <h1 class="fame-board-title mt-5 text-center d-lg-none">Fame Board</h1>
+    <div class="about-border1 mb-5 d-lg-none"></div>
 
     <div class="container-responsive fame-board pt-4 d-lg-none">
 
